samples/_failures_safe/1761209189_19d960_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97b895fd.c: In function ‘main’:
./samples/SAFE/__tmp_97b895fd.c:147:12: error: missing terminating " character
  147 |     printf("\nPerforming matrix multiplication...\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_97b895fd.c:147:5: error: expected expression at end of input
  147 |     printf("\nPerforming matrix multiplication...\n
      |     ^~~~~~
./samples/SAFE/__tmp_97b895fd.c:147:5: error: expected declaration or statement at end of input
